Fixed the jump position to footnote

--- a/assets/css/blogpost.scss
+++ b/assets/css/blogpost.scss
@@ -1,12 +1,12 @@
 .blogpost {
   .nuxt-content {
+    --header-height: 44px;
     .headers-border {
       border-color: #00000022;
       border-bottom-style: solid;
       border-bottom-width: 2px;
     }
     .headers-margin {
-      --header-height: 44px;
       padding-block-start: var(--header-height);
       margin-block-start: calc(-1 * var(--header-height) + 1.7rem);
     }
@@ -129,6 +129,13 @@
         td {
           padding: 0.5em;
         }
+      }
+    }
+
+    .footnotes {
+      li {
+        padding-block-start: var(--header-height);
+        margin-block-start: calc(-1 * var(--header-height));
       }
     }
   }
